前4章重看了加中文解释

--- a/data-model-patterns/1.Introduction.md
+++ b/data-model-patterns/1.Introduction.md
@@ -14,7 +14,7 @@ Dta modeling as current practiced suffers from two problems:
 
 ### Clarity
 
-讲为啥要清晰得表达模型，说uml还不够。
+讲为啥要清晰得表达模型，说图形的不足。
 
 ### Fundamentals of the business
 
