--- a/data-model-patterns/2.Data-modeling-conventions.md
+++ b/data-model-patterns/2.Data-modeling-conventions.md
@@ -75,5 +75,30 @@ in short,crossed lines do not affect readability nearly as much as do bent lines
 
 now that we have defined the symbols and,in general,organized them on the page,the third level of convention-the subject of this book-consists of modeling similar business situations in similar ways.
 
+two problems with data modeling as it is practiced today:
+
+1. models are often difficult to read
+2. they often don't describe that which is truly fundamental to a business.
+
+semantic conventions can be defined at two levels:
+
++ in terms of the organization as a whole,similar business situations can be modeled the same way.
++ within these models,certain configurations are common.
+
+for example,a company may be composed of divisions,each of which may be composed of departments,each of which may be composed of groups.company,division,department,and group are but special examples,however,of the more general organization,each organization may be composed one or more other organizations.Each organization,in turn,must be an example of one and only one organization type,that define(in data) if it's
+a "division","group" or what ever.
+
+in this model,it has fewer components,and it leaves room for the company to define new groupings sometimes in the future and encompass organizations not considered before.
+
+but,a group,department,division,or company may not be part of itself.and in the organization,these business rule cannot be expressed.
+
+the second constraint(division may not be part of departments) can be partially addressed by adding the entity organization type.
+
+each organization must be an example of exactly one organization type,and the organization type also has a structure("each organization type may be composed of one or more organization types").Even that,however,does not show(and this modeling approach  dose not have syntax to show)that the part of relationship in organization must be consistent with the part of relationship in organization type.
+
+this limitation of the more general model can be addressed by explicitly documenting such business rules outside the model.
+
+Note that the closer you get into identifying what is basic to a particular business,the closer you are to identifying what is basic to business in general.
+
 
 
