看到第五章

--- a/data-model-patterns/5.PROCEDURES-AND-ACTIVITIES.md
+++ b/data-model-patterns/5.PROCEDURES-AND-ACTIVITIES.md
@@ -63,5 +63,112 @@ PEOPLE (and ORGANIZATIONS too, for that matter) play different roles in both ind
 或者，规划好的工作顺序的活动，party可能给予特定的活动任务于活动。每个活动任务，是party的一个活动。每个活动任务必定是活动任务类型来定义的，比如统计。
 Alternatively, as the ACTIVITIES within a wORK ORDER are being planned, a PARTY could be given a specific ACTIVITY ASSIGnMENT to an ACTIVITY (an ACTIVITY STEP or an OTHER ACTIVITY). Each ACTIVITY ASSIGNMENT, then, is of a PARTY to an ACTIVITY. Each ACTIVITY ASSIGNMENT must be defined by an ACTIVITY ASSIGNMENT TYPE, such as "statistician."
 
-在大多是
+在大多数情况,工作顺序角色和行动任务一般都是一个人。组织也有可能参与到活动中来。保守的联系工作顺序角色和活动任务见图5.5.
 In most cases, these WORK ORDER ROLES and ACTIVITY ASSIGNMENTS will be about a PERSON. ORGANIZATIONS (such as subcontractors) can also participate in WORK ORDERS and ACTIVITies, however. So, the more conservative approach is to link WORK ORDER ROLES and ACTIVITY ASSIGNMEnt to PARTY, as is depicted in Figure 5.5.
+
+工作顺序角色和活动任务的区分点在工作顺序角色与party产生联系，贯穿工作顺序的生命周期。一个活动任务，另一方面来说，描述了party执行单一活动集的角色。
+The difference between a WORK ORDER ROLE and an ACTIVITY ASSIGNMENT is that WORK ORDER ROLE has the connotation that a PARTY will do something through out the life of the WORK ORDER. An ACTIVITY ASSIGNMENT, on the other hand,describes the fact that a PARTY performs a set of actions for a single ACTIVITY only.
+
+Both ACTIVITY ASSIGNMENT and WORK ORDER ROLE have such attributes as "start date," "end date," and so forth.
+
+如果角色和负责人用于安排劳动，时间表格是我们用来记录这个人真实活动消耗时间的机制。我们假设时间表格是由人提交确认的，大多数情况如此
+If roles and assignments are used to plan for labor usage, TIME SHEET ENTRY is the mechanism we'll use to record the actual hours worked by a PERSON and charged to either a WORK ORDER ROLE, a WORK ORDER (without a preassigned WORK ORDER ROLE), an ACTIVITI' ASSIGNMENT, or an ACTIVITY (where there was not an ACTIVITY ASSIGNMENT). For the sake of this example, we will assert that TIME SHEET ENTRIES are submitted by a PERSON, not a PARTY, since normally that is the case. It is not impossible that you may encounter a situation where time sheets are submitted by an organization, but this is rare.
+
+the primary attribute of interest in a TIME SHEET ENTRY is "hours worked,"submitted by the PERSON,
+charged to the ACTIVITY,WORK ORDER,or whatever.
+
+若有负责单价这个属性需要人员提交到时间表格，那就需要乘以已工作时间在消耗这个元素。总计所有的时间表格里的时间消耗就是劳动消耗。
+If "charge rate" is an attribute of the PERSON submitting a TIME SHEET ENTRY, this can be multiplied by the "hours worked" shown on it to arrive at the "cost,"a derived attribute of that TIME SHEET ENTRY. (Note that on the diagrams, derived attributes are shown in parentheses.) The sum of these for all TIME SHEET ENTRIES for the ACTIVITY(or ACTIVITY ASSIGNMENT,or whatever) is the "labor cost" (another derived attribute) of that ACTIVITY. This can be added to the "labor cost" of all other ACTIVITIES for the WORK ORDER,in order to arrive at the latter's "total labor cost."
+
+显而易见，如果这里有活动步骤，那么统计劳工消耗就能在工作顺序里的劳动消耗前统计。可选方案是，如果时间表格如果直接由工作顺序负责，那么活动部分的计算就能跳过了。
+Obviously, if there are ACTIVITY STEPS,they would be summarized into their ACTIvity"s "labor cost" before being made part of the WORK ORDER'S "total labor cost." Alternatively, if the TIME SHEET ENTRY is charged directly to the WORK ORDER,the ACTIVITY part of the calculation would be bypassed.
+
+举个例子，如果某人时新35美金，时间表格对某一特定的工作记录为28小时，那么此时间表记录的花费金额是980。如果其他的时间表里的花费金额是10270，那么这个工作顺序的总计花费是11250.
+For example, if a PERSON'S "charge rate" were $35 per hour, and the "hours worked" in a TIME SHEET ENTRY for a specific WORK ORDER were "28," the "cost" of ' that TIME SHEET ENTRY would be $980.ENTRIES charged to the WORK ORDER were the WORK ORDER would be $11,250.If the "cost" of all other TIME SHEET $10,270, then the "total labor cost" for the WORK ORDER would be $11,250.
+
+## ACTUAL ASSET USAGE
+
+如果时间表格记录了工作顺序的劳动时间。那么在工作顺序消耗的原材料可以被固定资产消耗所记录。
+if TIME SHEET ENTRY is the labor time spent on a word order.the materials used in the WORK ORDER are recorded in ACTUAL ASSET USAGE (See Figure 5.7.) An ACTUAL ASSET USAGE may be charged to either an ACTIVITY or to the WORK ORDEr as a whole.
+
+The ACTUAL ASSET USAGE may be either of an identified ASSET(such as a particular PIECE OF EQUIPMENT-a kind of DISCRETE ITEM-Or something from part INVENTORY),or it may be simply of an ASSET TYPE(such as "natural gas"). The ACTUAL ASSET USAGE must be expressed in a UNIT OF MEASURE, even if it is "each"-the unit of measure for items that are simply counted, rather than measured.
+
+That is, if the part used is a major subassembly (a PIECE OF EQUIPMENT identified by a serial number), then ACTUAL ASSET USAGE is of that PIECE OF EQUIPMENT. If the part used is a product that is kept in quantity in PART INVENTORY,then the ACTUAL ASSET USAGE will be of the PART INVENTORY from which the parts were drawn. In both cases, ASSET defines the ASSET TYPE and SITE. If the ACTUAL ASSET USAGE is of a generic material, not kept in INVENTORY(such as natural gas from a tap), then the ACTUAL ASSET USAGE is of an ASSET TYPE(probably a MATERIAL TYPE).
+
+无论哪种情况，这些消耗的单位都是需要被定义的，比如吧啦吧啦。单位消耗可以乘以数量，就得到了总花费。
+In any of these cases, the unit cost of the item used is defined either as "actual unit cost" (an attribute of ASSET),or as either "list price" or "standard cost" (one of which would be an attribute of ASSET TYPE). This unit cost can then be multiplied by the "quantity" used in the corresponding occurrence of ACTUAL ASSET USAGE, to arrive at the "cost," a derived attribute of that occurrence.The "cost" of all ACTUAL ASSET USAGES can then be added together to compute the "total material cost" of the ACTIVITY(a derived attribute), which in turn may be summed across ACTIVITIES to arrive at the derived attribute of the WORK ORDER "total material cost."
+
+As an example of these calculations, consider an ACTUAL ASSET USAGE of the MATERIAL WPE "Whimsite" in which the "quantity" (in pounds) is 30 and tne "list price" is 523. The "cost" then, of the aCTuAL ASSET USAGE is 5690 (523 multiplied by 30). If all other ACTUAL ASSET USAGE is charged to a WORK ORDER total $6,024, then the WORK ORDER "total material cost" is $6,714. Note that the ACTUAL ASSET USAGE may be based on an ASSET TYPE STRUCTURE ELEMENT; that is, the product being used may be one that was specified. Policy (the business rule) on this will vary from company to company and from situation to situation. In some cases, it may be required that no product can be used in a work order unless it is specified in the bill of materials for the item being worked on. ("Each ACTUAL ASSET USAGE must be based on one ASSET TYPE STRUCTURE ELEMENT." Figure 5.7 could be modified to show this by adding a solid line in the upper half of the relationship from ACTUAL ASSET USAGE to ASSET TYPE STRUCTURE ELEMENT.) Other situations may be more relaxed, as is shown with a complete dashed line in Figure 5.7
+
+Note the parallel between this and the way a WORK ORDER'S "total labor cost" was computed, above. With "total labor cost" and "total material cost,"we can now compute the "total cost" (another derived attribute of WORK ORDER) as the sum of the two.
+
+To take an example, a WORK ORDER might incur the costs shown in Table 5.1:
+
+## Asset Structure
+
+In Figure 4.12 and its accompanying text, the ASSET STRUCTURE ELEMENT was defined as the fact that one ASSET is a component of another ASSET. A modified version of this is reproduced as part of Figure 5.8
+
+注意，若你画一条线从工作顺序到固定资产消耗再到资产，这个圈类似资产构造元素。事实上，一个工作顺序去维护，安装，删除，监测一个独立的资产可能需要另一固定资产的消耗，这就描述了一个事实，第二个资产可能是第一个资产的资产构造元素。唯一的区别是，工作顺序，固定资产消耗描述的是安装整个组件的行为，不是物理上的存在。
+Note that if you draw a line from DISCRETE ITEM through WORK ORDER and then through ACTUAL ASSET USAGE to ASSET, this cycle is functionally equivalent to the ASSET STRUCTURE ELEMENT. That is, the fact that a WORK ORDER to fix, install,remove, or inspect a DISCRETE ITEM (an ASSET) may be charged with an ACTUAL ASSET USAGE of another ASSET, describes the fact that the second ASSET may be a component in an ASSET STRUCTURE ELEMENT that is in the first ASSET (in this case, a DISCRETE ITEM). The only difference is that the WORK ORDER/ACTUAL ASSET USAGE combination describes the act of installing the component (including the date
+done and any labor used, for example) not just its physical presence.
+
+The ASSET STRUCTURE ELEMENT does allow for the description of the composition of INVENTORY, which the WORK ORDER/ ACTUAL ASSET USAGE configuration does not.
+
+## KINDS OF WORK ORDERS
+
+Different kinds of WORK ORDERS are used to produce different kinds of things. For this reason, their models are not identical. They are very similar, however A MAInTENANCE WORK ORDER, for example, produces working equipment. A PRODUCTION ORDER produces a product or quantity of material for sale. A PROJECT produces a building or other large-scale result. A WORK ORDER may also bE issued to respond to an accident or some other safety incident. It is possible tc imagine other kinds of WORK ORDERS as well.
+
+These differences may be seen in the models that follow: a MAINTENANCE WORK ORDER is to fix, install, remove, or inspect a DISCRETE ITEM. (See Figure 5.9.) A PRODUCTION ORDER, on the other hand, is to make an ASSET TYPE, resulting in OnE or more PRODUCTION DELIVERIES either of a DISCRETE ITEM or of an INVENTORY (seE Figure 5.10). In addition, it is usually of interest to keep track of a PRODUCTIOn ORDER through a plant, from work CENTER to WORK CENTER, while a MAINTENANCE WORK ORDER usually is not kept track of the same way. A PROJECT (such as a construction project), like a PRODUCTION ORDER, also makes something, but there is not necessarily an ASSET TYPE describing it in advance, and it is not usu ally as concerned with the progression of work from WORK CENTER to WORK CENTER." Its view of the way tasks are related to each other, however, is more complex, as we shall see when we get to Figure 5.13.
+
+The kinds of WORK ORDERS to be discussed in the following sections are
+
++ Maintenance维护任务
++ Production (manufacturing) 制造
++ Large projects 大型项目
++ Emergency (responses to safety incidents)
+
+In addition, Chapter Six will describe services offered to customers under contract.
+
+### Maintenance Work Orders
+
+维护工作有四种类型，检测，预检修，紧急维护，预防维护。
+The model of MAINTENANCE WORK ORDERS is similar in structure to what we've seen so far, with some variations. Usually drawn up either to fix something,or to prevent it from failing, a MAINTENANCE WORK ORDER may also be used to order the installation or removal of something, or to respond to an emergency. Figure 5.9 shows how, as with other WORK ORDERS, each MAINTENANCE WORK ORDER may be to carry out a single PROCEDURE or may be the authorization for one or more ACTIVITIES,each of which is to carry out a PROCEDURE. There are four types of MAINTENANCE WORK ORDERS: inspections, predictive maintenance work orders, emergency work orders, and preventive maintenance work orders.
+
+The first of these is a WORK ORDER to authorize an INSPECTION-a diagnostic examination of a PIECE OF EQUIPMENT. An INSPECTION will probably require some labor time (TIME SHEET ENTRIES),but usually no ACTUAL ASSET USAGE. An INSPECTION may be the trigger of one or more PREDICTIVE WORK ORDERS.
+
+预检修是为了处理检测发现的问题。
+The second type, a PREDICTIVE WORK ORDER, is issued to resolve a potential problem that has been diagnosed from an INSPECTION. That is, measurements taken from a PIECE OF EQUIPMENT may indicate that a particular part is wearing out and is due for replacement. Each PREDICTIVE WORK ORDER must be triggered by an INSPECTION.
+
+紧急维护
+An EMERGENCY WORK ORDER is the third kind of MAINTENANCE WORK ORDER.It is issued when something in the plant fails. It is the authorization to fix whatever is broken-and do it quickly! It is usually initiated by a call from a PERSON. Key attributes are "problem description" and "disposition." In this case,the PROCEDURES that are implemented in the EMERGENCY WORK ORDER are emergency procedures set up to deal with dangerous situations. EMERGENCY WORK ORDERS are discussed further in the discussion of safety-related incidents, below.
+
+第四种预防维护，是定期任务。
+The fourth type, a PREVENTIVE MAINTENANCE WORK ORDER,authorizes work to be performed according to a schedule (every three months or every six months, for example). Like other MAINTENANCE WORK ORDERS,it is the authorization for one or more ACTIVITIES,each the execution of a particular PROCEDURE. Each PROCEDURE implemented have the attribute in a PREVENTIVE MAINTENANCE WORK ORDER,* however, must have the attribute "cycle time"-the time expected between occurrences of the word."schedule start date," an attribute of MAINTENANCE WORK ORDER, has special significance.Typically, the next PREVENTIVE MAINTENANCE WORK ORDER time expected between occurrences of the will be set up when the current one is completed, with the "scheduled start date" set to the "actual end date" of the last PREVENTIVE MAINTENANCE WORK ORDER,plus the" cycle time" of the PROCEDURES the MAINTENANCE WORK ORDER is to carry out.
+
+As with other WORK ORDERS,MAINTENANCE WORK ORDERS may be charged with ACTUAL ASSET USAGES,and may be charged with TIME SHEET ENTRIES. "Total material cost," "total labor cost," and "total cost" may be derived as previously described and portrayed in Figures 5.6 and 5.7.
+
+### Production Orders
+
+When the work to be done is the manufacture of a company's products, the model changes somewhat, although it retains much of the same pattern as that for maintenance.
+
+The two primary differences between MAINTENANCE WORK ORDERS and PRODUCTION ORDERS concern the objectives of the effort, and the return of SITE, which we introduced in Chapter Three. Some names change as well.
+
+in Figure 5.10, we've renamed WORK ORDER to PRODUCTION ORDER, and its objective, instead of being to fix, install, remove, or inspect a PIECE OF EQUIPMENT,is to make an ASSET TYPE. Upon completion, a PRODUCTION ORDER may be the source of one or more PRODUCTION DELIVERIES of an ASSET. The PRODUCTION ORDER might produce DISCRETE ITEMS or additions to INVENTORY.
+
+把活动重命名为制造步骤继续基础的活动。在制造活动中，每个活动的地址仅表示单独的一工作项被创造出的地址。伴随着制造顺序，这个地址似乎很重要，的确，这个地址很可能就是工厂或者工作中心。
+To better reflect the language of the typical manufacturing plant, we have taken modeler's license and changed the name of ACTIVITY to MANUFACTURING STEP,and extended the basic model to show where each step will be performed in the plant. In the model of MAINTENANCE WORK ORDERS,the SITE of each activity is present only as the location of the DISCRETE ITEM being worked on. It may be included on the model, but it often is not required. With PRODUCTION ORDERS, however, the SITE becomes more important. In particular, a category of SITE,the WORK CENTER,is a manufacturing point in the factory. 
+
+实际上，建模基于现实需要。在一些方案里，工作中心不是那么重要。
+Actually, the organization being modeled will determine whether true. In some plants, WORK CENTERS may not be important. The plant also determines whether a MANUFACTURING STEP must be to carry out a predefined PROCEDURE. In highly controlled industries like pharmaceuticals, this would be so, but in others, the knowledge of a craftsman, rather than published procedures, may be the source of the step. Figure 5.10 takes this more craft-oriented view that each MANUFACTURING STEP may be to carry out a PROCEDURE。
+
+通常，制造的顺序是提前定义好的。
+Normally, the manufacturing sequence is defined in advance, in terms of the WORK CENTERS that a PRODUCTION ORDER must visit. The fact that an ASSET TYPEis normally processed in a particular WORK CENTER is called a ROUTING STEP. That is, each ROUTING STEP must be to make a particular ASSET TYPE, and this take place at a particular work center.this routing step then may be the basic for one or more actual manufacturing steps that are part of production orders.Figure 5.10 show this.
+
+一种更加熟悉的模型，会把构建步骤分组。因此每种资产类型可能由1个或多个构建组来构成。
+A more sophisticated model than that shown would group ROUTING STEPS into ROUTINGS,so that each ASSET TYPE may be made via one or more ROUTINGS(sets of ROUTING STEPS), each of which is composed of one or more ROUTING STEPS. This allows for alternative ROUTINGS for building the same product. In either case, the same ASSET TYPE may be made in more than one WORK CENTER as alternatives, rather than as a sequence of steps. This could be controlled by assigning the same "step number" to multiple ROUTING STEPS。
+
+Each MANUFACTURING STEP, then, either must be at a SITE (usually a WORK CENTER,but in some companies, it is conceivable that larger SITES may have to be identified), or it must be based on a ROUTING STEP(that identifies a WORK CENTER/SITE).
+
+As with MAINTENANCE WORK ORDERS, labor usage by a PRODUCTION ORDER may be recorded via TIME SHEET ENTRIES,charged to either individual manNUFACTURINGS TEPS,or to the PRODUCTION ORDER as a whole. Calculation of "total labor
+cost" for the PRODUCTIONORDERis then done as was shown in Figure 5.6. In most organizations, however, production roles need not be defined in advance,
+so the WORK ORDER ROLE entity
